<resources>
    <string name="app_name">HealthTipsApp</string>
    <string name="default_web_client_id">797006781831-nsboj0dtd2ppk5bjrlbsci0oriaugred.apps.googleusercontent.com</string>
    <string name="map_api">ads</string>
    <string name="cd_back">Back</string>
    <string name="pill_tracker_title">Pill Tracker</string>
    <string name="pill_add_medicine">Add medicine</string>
    <string name="pill_empty_title">No medicines yet</string>
    <string name="pill_empty_body">Add your medicines and set the times. We\'ll remind you when it\'s time to take them.</string>
</resources>